[package]
name = "roku-ecp"
version = "0.0.1"
authors = ["Carlos Chacin"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/Hermitter/roku-ecp-rs"
keywords = ["roku", "tv", "remote"]
license = "MIT"
description = "A library for the Roku External Control Protocol (ECP)."

[dev-dependencies]
async-std = "1.8"

[dependencies]
surf = "2.1.0"
serde = "1.0.120"
serde-xml-rs = "0.4.1"
url = "2.2.0"